--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
             <artifactId>maven-site-plugin</artifactId>
             <version>3.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
 
     </dependencies>
 
