--- a/vuetest/package.json
+++ b/vuetest/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "echarts": "^5.3.2",
+    "echarts-wordcloud": "^2.0.0",
     "element-plus": "^2.2.0",
     "element-ui": "^2.4.5",
+    "lib-flexible": "^0.3.2",
     "vue": "^3.2.13",
     "vue-axios-plugin": "^1.3.0",
+    "vue-echarts-v3": "^2.0.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
